# mcp_test

./: .env.example  README.md  architectural_decision.md
backend/: .env.example  README.md  main.py  pyproject.toml  requirements.txt  streamlit.py  test_mcp_chat.py  test_mcp_tools.py
backend/api/: auth.py  chat.py  orders.py  products.py
backend/core/: chatbot.py  config.py  errors.py  logging.py  mcp_client.py
backend/models/: schemas.py
backend/services/: auth_service.py  chat_service.py  mock_data.py  order_service.py  product_service.py
frontend/: index.html
frontend/src/: App.tsx  apiBase.ts
frontend/src/components/: ChatWidget.tsx
frontend/src/pages/: Login.tsx  Order.tsx  OrderHistory.tsx  Products.tsx
frontend/src/styles/: modern.css
scripts/: deploy.ps1  deploy.sh  destroy.ps1  destroy.sh
terraform/: terraform.tfvars
