[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "mcp[sse]>=1.27.0",
    "openai>=2.33.0",
    "openai-agents>=0.14.8",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
    "uvicorn>=0.46.0",
]
